--- a/app/src/main/res/layout/activity_main_screen.xml
+++ b/app/src/main/res/layout/activity_main_screen.xml
@@ -34,7 +34,7 @@
         tools:ignore="ImageContrastCheck" />
 
     <Button
-        android:id="@+id/btn_play"
+        android:id="@+id/btnPlay"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
@@ -47,7 +47,7 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/btn_statistics"
+        android:id="@+id/btnStatistics"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -57,10 +57,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_play" />
+        app:layout_constraintTop_toBottomOf="@+id/btnPlay" />
 
     <Button
-        android:id="@+id/btn_settings"
+        android:id="@+id/btnSettings"
         android:layout_width="250sp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
@@ -70,10 +70,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_statistics" />
+        app:layout_constraintTop_toBottomOf="@+id/btnStatistics" />
 
     <TextView
-        android:id="@+id/tv_version"
+        android:id="@+id/tvVersion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="5dp"
