--- a/app/src/main/res/layout/fragment_consolidate.xml
+++ b/app/src/main/res/layout/fragment_consolidate.xml
@@ -12,7 +12,7 @@
         android:background="@color/background_green">
 
         <TextView
-            android:id="@+id/ConsolidarPregunta"
+            android:id="@+id/tvConsolidateQuestion"
             android:layout_width="match_parent"
             android:layout_height="72dp"
             android:layout_marginLeft="70dp"
@@ -22,14 +22,14 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="24sp"
-            app:layout_constraintBottom_toTopOf="@+id/Advertencia"
+            app:layout_constraintBottom_toTopOf="@+id/ivAdvice"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:ignore="TextSizeCheck" />
 
         <ImageView
-            android:id="@+id/Advertencia"
+            android:id="@+id/ivAdvice"
             android:layout_width="32dp"
             android:layout_height="32dp"
             android:layout_marginStart="189dp"
@@ -38,7 +38,7 @@
             android:backgroundTint="@color/background_green"
             android:contentDescription="@string/warning"
             android:src="@android:drawable/ic_menu_info_details"
-            app:layout_constraintBottom_toTopOf="@+id/ExplicacionConsolidar"
+            app:layout_constraintBottom_toTopOf="@+id/tvConsolidateExplanation"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
             tools:ignore="ImageContrastCheck" />
 
         <TextView
-            android:id="@+id/ExplicacionConsolidar"
+            android:id="@+id/tvConsolidateExplanation"
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:layout_marginStart="60dp"
@@ -61,10 +61,10 @@
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Advertencia" />
+            app:layout_constraintTop_toBottomOf="@+id/ivAdvice" />
 
         <Button
-            android:id="@+id/Si"
+            android:id="@+id/btnConfirm"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginEnd="70dp"
@@ -77,14 +77,14 @@
             android:textColor="@color/black"
             android:textSize="20sp"
             app:cornerRadius="15sp"
-            app:layout_constraintBottom_toTopOf="@+id/No"
+            app:layout_constraintBottom_toTopOf="@+id/btnCancel"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/ExplicacionConsolidar" />
+            app:layout_constraintTop_toBottomOf="@+id/tvConsolidateExplanation" />
 
         <Button
-            android:id="@+id/No"
+            android:id="@+id/btnCancel"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:layout_marginEnd="70dp"
