--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey">#C7C7C7</color>
     <color name="background_white_green">#92a88f</color>
+    <color name="red">#F63521</color>
 
 </resources>
