VARIAS UT completadas

--- a/app/src/main/res/layout/fragment_resumen.xml
+++ b/app/src/main/res/layout/fragment_resumen.xml
@@ -52,12 +52,12 @@
     <Button
         android:id="@+id/btnEndGame"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@drawable/btn_shape_round"
+        android:layout_height="90dp"
         android:layout_marginLeft="50sp"
-        android:layout_marginTop="500sp"
+        android:layout_marginTop="400sp"
         android:layout_marginRight="50sp"
         android:layout_marginBottom="150sp"
+        android:background="@drawable/btn_shape_round"
         android:onClick="finishGame"
         android:text="@string/finishGame"
         android:textColor="@color/black"
