--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -53,6 +53,7 @@
         android:text="@string/topic"
         android:textSize="@dimen/settings_slider_title_font_size"
         android:textStyle="bold"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/sbSounds" />
 
@@ -119,6 +120,7 @@
         android:layout_height="52dp"
         android:layout_marginStart="60dp"
         android:layout_marginTop="12dp"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tvActualTopic" />
 
