Mejoras en Reto Preguntas y la interfaz de ahorcado

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -24,6 +24,19 @@
         app:tint="@color/black"
         tools:ignore="ImageContrastCheck" />
 
+    <ImageView
+        android:id="@+id/btnMute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="12dp"
+        android:backgroundTint="@color/background_green"
+        android:contentDescription="@string/mute"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_lock_silent_mode"
+        app:tint="@color/black" />
+
     <LinearLayout
         android:id="@+id/Linea"
         android:layout_width="407dp"
